2014-11-21  Will Newton  <will.newton@linaro.org>
	    Andrew Pinski  <andrew.pinski@caviumnetworks.com>

	* elf/elf.h (R_AARCH64_P32_ABS32, R_AARCH64_P32_COPY,
	R_AARCH64_P32_GLOB_DAT, R_AARCH64_P32_JUMP_SLOT,
	R_AARCH64_P32_RELATIVE, R_AARCH64_P32_TLS_DTPMOD,
	R_AARCH64_P32_TLS_DTPREL, R_AARCH64_P32_TLS_TPREL,
	R_AARCH64_P32_TLSDESC, R_AARCH64_P32_IRELATIVE): Define.
	(R_AARCH64_TLS_DTPMOD64): Rename to ..
	(R_AARCH64_TLS_DTPMOD): This.
	(R_AARCH64_TLS_DTPREL64): Rename to ...
	(R_AARCH64_TLS_DTPREL): This.
	(R_AARCH64_TLS_TPREL64): Rename to ...
	(R_AARCH64_TLS_TPREL): This.
	* sysdeps/aarch64/dl-machine.h (elf_machine_type_class): Update
	R_AARCH64_TLS_DTPMOD64, R_AARCH64_TLS_DTPREL64, and
	R_AARCH64_TLS_TPREL64.
	(elf_machine_rela): Likewise.

2014-11-21  Torvald Riegel  <triegel@redhat.com>

	* sysdeps/microblaze/bits/atomic.h (__HAVE_64B_ATOMICS): Fix value
	by setting it to 0.  64b atomics are not supported currently.

2014-11-21  Alexandre Oliva <aoliva@redhat.com>

	[BZ #16469]
	* resolv/res_query.c (__libc_res_nsearch): Skip leading dot in
	search domain names.

2014-11-21  Alexandre Oliva <aoliva@redhat.com>

	[BZ #16469]
	* NEWS: Update.
	* resolv/res_query.c (__libc_res_nquerydomain): Retain
	trailing dot.
	* posix/tst-getaddrinfo5.c: New.
	* posix/Makefile (tests): Add it.

2014-11-21  Alexandre Oliva <aoliva@redhat.com>

	[BZ #14498]
	* NEWS: Fixed.
	* nss/nss_db/db-XXX.c (_nss_db_get##name##_r): Update hidx
	after parsing line but before break_if_match.
	* nss/nss_files/files-service (DB_LOOKUP): Don't "continue;"
	if there is a protocol mismatch.

2014-11-21  Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>

	* manual/sysinfo.texi (addmntent): It is actually MT-Safe,
	because the potential race is on the user-supplied stream.

2014-11-21  Alexandre Oliva <aoliva@redhat.com>

	* sysdeps/posix/ctermid.c (ctermid): Return a pointer to a
	string literal if not passed a buffer.
	* manual/job.texi (ctermid): Update reasoning, note deviation